assets/css/main.styl
a
  text-decoration none
  color inherit
  cursor pointer

header
  height 60px
  font-size 14px
  line-height @height
  border-bottom 1px solid
  h1
    font-size inherit
    text-transform uppercase
    font-weight normal
    text-align center
    margin 0
  .controls
    position absolute
    top 0
    margin 0 20px
    &.right
      right 0
    &.left
      left 0

  .user
    img
      position relative
      border-radius 50px
      margin-left 20px
    .name
      position relative
      opacity 0
      left 1em
      pointer-events none
      transition all ease-in-out 0.2s
      -webkit-transition @transition
      -moz-transition @transition
    &:hover
      .name
        left 0
        opacity 1
        pointer-events auto

#reports
  h1, h2, h3, h4, h5
    margin 0

  .fast
    font-weight 100

  .regular
    font-weight 400

  .slow
    font-weight 900

  .port
    float left
    box-sizing border-box
    width 320px
    padding 0 10px
    text-align center
    &:first-child
      margin-left 10px
    h1
      font-size 24px
      font-weight normal
      line-height 2em
    h2
      font-size 14px
      line-height 2em
      text-transform uppercase
      border-bottom 2px solid
      border-top 4px solid
    h3
      margin-bottom -0.2em
      text-transform capitalize
      font-weight normal
      font-size 14px
    .lane
      margin 0
      padding 20px 0 0
      border-bottom 1px solid
      .switch-mode
        line-height 2em
        font-style italic
        font-weight 200
        font-size 14px
      &:last-of-type
        border-bottom none
      .delay
        margin 0
        font-size 96px
        line-height 1em

.user-report
  border 1px solid
  border-left none
  border-right none
  position relative
  overflow hidden

  height 48px
  transition all ease-in-out 0.5s
  -webkit-transition @transition
  -moz-transition @transition
  &.ng-hide
    height 0
  &.ng-hide-add,
  &.ng-hide-remove
    display block !important
  .controls
    position absolute
    bottom 0
    width 100%
    height @height
    button
      appearance none
      -webkit-appearance appearance
      -moz-appearance appearance
      -webkit-user-select none
      -moz-user-select none
      -khtml-user-select none
      -ms-user-select none
      user-select none
      -webkit-transition all ease-in-out 0.2s
      -moz-transition all ease-in-out 0.2s
      transition all ease-in-out 0.2s
      outline 0
      font-size 16px
      height @height
      width 25%
      box-sizing border-box
      border none
      color inherit
      background transparent
      border-right 1px solid
      padding 0
      font-family inherit
      cursor pointer

      &.text
        font-size 12px
        text-transform uppercase
        font-weight 500
      &:last-child
        border-right none
      &[disabled]
        pointer-events none

